--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -4,7 +4,7 @@ FROM mysql:5.7
 # Add a database and root password
 # For hints on how to do this, consult the mysql 5.7 image documentation
 ENV MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-ENV MYSQL_DATABASE={MYSQL_DATABASE}
+ENV MYSQL_DATABASE=${MYSQL_DATABASE}
 # Add the content of the .sql file to your image
 # All scripts copied to docker-entrypoint-initdb.d/ are automatically
 # executed during container startup
